--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.2",
   "description": "Use the Sharp Library to quickly create images and HTML code",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -fr dist/* && tsc"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bryon Smith",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.13.0",
