--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "solid-image",
-  "version": "0.0.3",
-  "description": "Use the Sharp Library to quickly create images and HTML code",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.0.4",
+  "description": "Use the Sharp Image Library to quickly create images and HTML code",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -fr dist/* && tsc",
+    "build": "rm -fr lib/* && tsc",
     "prepac": "npm run build",
-    "pac": "npm version patch && npm publish",
+    "pac": "npm version patch --no-git-tag-version && npm publish",
     "dry": "npm publish --dry-run"
   },
   "keywords": [],
@@ -16,7 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.13.0",
-    "@types/sharp": "^0.31.1"
+    "@types/sharp": "^0.31.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "sharp": "^0.31.3"
