--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-image",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "Use the Sharp Image Library to quickly create images and HTML code",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -22,6 +22,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "console-progress-bar": "^1.0.8",
     "sharp": "^0.31.3"
   },
   "repository": {
