--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "solid-image",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Use the Sharp Image Library to quickly create images and HTML code",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
