add print option; add Image jsx function.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "solid-image",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Use the Sharp Image Library to quickly create images and HTML code",
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
   "type": "module",
+  "homepage": "https://github.com/webmastersmith/solid-image#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -fr lib/* && tsc",
